TEST_PROGRAMS/INVALID/jacob_errington/ident-reserved.min
var while : string;
# trying to use a keyword as an identifier

